--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Get changes
         run: |
+          git fetch --unshallow
           git diff --name-only ${{ github.event.before }} ${{ github.event.after }} > changed_files.txt
 
       - name: List changed files
